feat: add support for dropping tables and repository support for dropping individual object